--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,31 @@
 #root {
-  max-width: 1280px;
+  
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  color: #888;
-  background-color: #f2f2f2
+  color: #e5d3d3;
+  background-image: linear-gradient(to bottom, #000000, #888888);
 }
+
+
+  .nav-link {
+    color: #e5d3d3;
+  }
+
+
+.photo-container {
+    flex: 0 0 auto;
+    
+    margin-top: 20px;
+}
+
+.photo {
+    width: 200px;
+    height: auto; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0.1);
+}
+
+.info-container {
+    margin-top: 20px;
+}
+
