skills moved and new pic

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 #root {
-  
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -7,47 +6,14 @@
   background-image: linear-gradient(to bottom, #000000, #888888);
 }
 
-
-  .nav-link {
-    color: #e5d3d3;
-  }
-
-/* 
-.photo-container {
-    flex: 0 0 auto;
-    
-    margin-top: 20px;
+.nav-link {
+  color: #e5d3d3;
+}
+.nav-link:hover {
+  color: #888888;
 }
 
-.photo {
-    width: 200px;
-    height: auto; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0.1);
-}
-
-.info-container {
-  width: 100%; 
-  max-width:800px;
-  margin: 20px auto; 
-  padding: 20px; 
-  border: 2px solid #ccc; 
-  
-}
-
-.info-container {
-  animation: glowing-border 2.5s infinite alternate;
-}
-
-@keyframes glowing-border {
-  from {
-      border-color: #131e14;
-  }
-  to {
-      border-color: #487498;
-  }
-} */
 .skills {
- 
   border-style: solid;
   animation: glowing-border 2.5s infinite alternate;
   padding: 20px;
@@ -61,105 +27,114 @@
 }
 @keyframes glowing-border {
   from {
-      border-color: #ffffff;
+    border-color: #ffffff;
   }
   to {
-      border-color: #487498;
-  } }
+    border-color: #487498;
+  }
+}
 .about-section {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  
 }
 
 .container {
   margin-top: 40px;
 }
 .photo-container {
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
 }
 
 .photo {
-  width: 200px; 
-  border-radius: 50%; 
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+  width: 200px;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .info-container {
-  max-width: 600px; 
+  max-width: 600px;
 }
 
 .social-icons {
   display: flex;
-  
+  justify-content: flex-start;
+  margin-bottom: 10px;
 }
-.icon{
-  margin: 0 10px; 
-  font:24px }
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.centered-text {
+  margin-top: 10px;
+}
+.icon {
+  margin: 0 10px;
+  font: 24px;
+}
 
-  .contact-form {
-    max-width: 400px;
-    margin: 0 auto;
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  .form-control {
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  
-  textarea.form-control {
-    height: 150px;
-  }
-  
-  .btn-primary {
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .btn-primary:hover {
-    background-color: #0056b3;
-  }
+.contact-form {
+  max-width: 400px;
+  margin: 0 auto;
+}
 
-  .screenshot {
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5); 
-  
- 
-    transition: box-shadow 0.3s ease;
-  }
-  p { 
-    font-size: 1.2em;
-    font-style: italic;
-    height: auto;
-  } 
-  
-  
-  .screenshot:hover {
-    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.909); 
-  }
-  
-  .error-text {
-    color: red;
-  }
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-control {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+textarea.form-control {
+  height: 150px;
+}
+
+.btn-primary {
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+}
+
+.screenshot {
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+
+  transition: box-shadow 0.3s ease;
+}
+p {
+  font-size: 1.2em;
+  font-style: italic;
+  height: auto;
+}
+
+.screenshot:hover {
+  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.909);
+}
+
+.error-text {
+  color: red;
+}
 @media (min-width: 768px) {
   .about-section {
-      flex-direction: row;
-      justify-content: center; 
-      text-align: left;
+    flex-direction: row;
+    justify-content: center;
+    text-align: left;
   }
 
   .photo-container {
-      margin-right: 40px; 
+    margin-right: 40px;
   }
 }
