--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+
 #root {
   margin: 0 auto;
   padding: 2rem;
@@ -5,7 +7,9 @@
   color: #e5d3d3;
   background-image: linear-gradient(to bottom, #000000, #888888);
 }
-
+body {
+  font-family: 'Josefin Sans', cursive;
+}
 .nav-link {
   color: #e5d3d3;
 }
@@ -17,20 +21,17 @@
   border-style: solid;
   animation: glowing-border 2.5s infinite alternate;
   padding: 20px;
+  margin-top: 50px;
+  background-image: linear-gradient(to bottom, rgba(57, 47, 47, 0.5), rgba(105, 97, 97, 0.2)); 
 }
 
-.skill-icons {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  animation: glowing-border 2.5s infinite alternate;
-}
+
 @keyframes glowing-border {
   from {
     border-color: #ffffff;
   }
   to {
-    border-color: #487498;
+    border-color: rgba(105, 97, 97, 0.2)
   }
 }
 .about-section {
@@ -41,26 +42,45 @@
 }
 
 .container {
-  margin-top: 40px;
+  margin-top: 100px;
 }
-.photo-container {
-  margin-bottom: 20px;
+.photo  {
+ width: 300px
 }
 
-.photo {
+.photo-2  {
   width: 200px;
   border-radius: 50%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  
 }
 
+
+ .photo::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.5)); 
+  border-radius: 50%;
+} 
+
+
+.photo:hover {
+  transform: scale(1.1);
+} 
 .info-container {
-  max-width: 600px;
+  max-width: 700px;
 }
 
 .social-icons {
   display: flex;
   justify-content: flex-start;
   margin-bottom: 10px;
+}
+.footer {
+  margin-top: 50px;
 }
 .footer {
   display: flex;
@@ -73,9 +93,14 @@
 }
 .icon {
   margin: 0 10px;
-  font: 24px;
+  font-size: 30px;
+  
 }
 
+.skills p:hover {
+  color: #ebebeb; 
+  
+}
 .contact-form {
   max-width: 400px;
   margin: 0 auto;
@@ -111,14 +136,29 @@ textarea.form-control {
 
 .screenshot {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
-
   transition: box-shadow 0.3s ease;
+  
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+}
+.event-space {
+  height: 100%;
+  width: 100%;
+}
+.screenshot img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 p {
-  font-size: 1.2em;
+  font-size: 1em;
   font-style: italic;
   height: auto;
+  padding: 10px; 
+  
 }
+
 
 .screenshot:hover {
   box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.909);
