--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans");
 
 #root {
   margin: 0 auto;
@@ -8,7 +8,7 @@
   background-image: linear-gradient(to bottom, #000000, #888888);
 }
 body {
-  font-family: 'Josefin Sans', cursive;
+  font-family: "Josefin Sans", cursive;
 }
 .nav-link {
   color: #e5d3d3;
@@ -22,16 +22,19 @@ body {
   animation: glowing-border 2.5s infinite alternate;
   padding: 20px;
   margin-top: 50px;
-  background-image: linear-gradient(to bottom, rgba(57, 47, 47, 0.5), rgba(105, 97, 97, 0.2)); 
+  background-image: linear-gradient(
+    to bottom,
+    rgba(57, 47, 47, 0.5),
+    rgba(105, 97, 97, 0.2)
+  );
 }
 
-
 @keyframes glowing-border {
-  from {
+  from {  
     border-color: #ffffff;
   }
   to {
-    border-color: rgba(105, 97, 97, 0.2)
+    border-color: rgba(105, 97, 97, 0.2);
   }
 }
 .about-section {
@@ -44,32 +47,33 @@ body {
 .container {
   margin-top: 100px;
 }
-.photo  {
- width: 300px
+.photo {
+  width: 300px;
 }
 
-.photo-2  {
+.photo-2 {
   width: 200px;
   border-radius: 50%;
-  
 }
 
-
- .photo::after {
-  content: '';
+.photo::after {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0.5)); 
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.5)
+  );
   border-radius: 50%;
-} 
-
+}
 
 .photo:hover {
   transform: scale(1.1);
-} 
+}
 .info-container {
   max-width: 700px;
 }
@@ -94,12 +98,10 @@ body {
 .icon {
   margin: 0 10px;
   font-size: 30px;
-  
 }
 
 .skills p:hover {
-  color: #ebebeb; 
-  
+  color: #ebebeb;
 }
 .contact-form {
   max-width: 400px;
@@ -137,28 +139,22 @@ textarea.form-control {
 .screenshot {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
   transition: box-shadow 0.3s ease;
-  
-  display: flex; 
-  justify-content: center; 
-  align-items: center; 
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .event-space {
   height: 100%;
   width: 100%;
-}
-.screenshot img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+} 
+
 p {
-  font-size: 1em;
+  font-size: 0.9em;
   font-style: italic;
   height: auto;
-  padding: 10px; 
-  
+  padding: 10px;
 }
-
 
 .screenshot:hover {
   box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.909);
