--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ body {
   border-radius: 50%;
 }
 
-.photo::after {
+/* .photo::after {
   content: "";
   position: absolute;
   top: 0;
@@ -69,7 +69,7 @@ body {
     rgba(0, 0, 0, 0.5)
   );
   border-radius: 50%;
-}
+} */
 
 .photo:hover {
   transform: scale(1.1);
